# Macau-Gaming-Nowcast

./: .gitignore  README.md  config.py  conftest.py  pyproject.toml
.github/workflows/: ci.yml
src/: analysis.py  nowcast.py
src/data/: dicj.py  net.py  sec_xbrl.py
tests/: test_dicj.py  test_nowcast.py
